# python_environment

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.md  code_checks.py  docker-compose.yml  dockerignore  pyproject.toml  update-submodule-branch.sh
docker/: Dockerfile
uv_environment/: README.md  pyproject.toml
