[project]
name = "openmind_uv"
version = "1.0.0"
description = "general python environment (opensense)"
requires-python = ">=3.10.8"

dependencies = [
    "torch-geometric==1.7.2",
    "scikit-learn==1.3.2",
    "nilearn==0.10.4",
    "pre-commit==3.6.0",
    "ultralytics==8.2.30",
    "ipykernel==6.29.4",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",
    "jupyterlab==4.2.1",
    "scikit-image==0.23.2",
    "matplotlib==3.9.0",
    "einops==0.8.0",
    "loguru==0.7.2",
    "pysnooper==1.2.0",
    "ruff==0.5.0",
    "timm==1.0.7",
    "simpleitk==2.4.0",
    "pymaxflow==1.3.0",
    "albumentations==2.0.6",
    "antspyx==0.5.4",
    "connected-components-3d==3.23.0",
    "cumm-cu118==0.7.11",
    "cython==3.1.0",
    "dijkstra3d==1.15.1",
    "edt==3.0.0",
    "elasticdeform==0.5.1",
    "fastapi==0.115.12",
    "django==5.2.1",
    "fastremap==1.16.1",
    "fill-voids==2.0.8",
    "future==1.0.0",
    "huggingface==0.0.1",
    "huggingface-hub==0.31.1",
    "spconv-cu118==2.3.8",
    "numba==0.61.2",
    "memory-profiler==0.61.0",
    "monai==1.4.0",
    "mpmath==1.3.0",
    "munkres==1.1.4",
    "networkx==3.4.2",
    "nibabel==5.3.2",
    "numpymaxflow==0.0.7",
    "nvsmi==0.4.2",
    "onnxruntime==1.22.0",
    "pandas==2.2.3",
    "pillow==11.2.1",
    "prefetch-generator==1.0.3",
    "pydicom==3.0.1",
    "pykdtree==1.4.1",
    "redis==6.0.0",
    "requests==2.32.3",
    "six==1.17.0",
    "tensorboard==2.19.0",
    "threadpool==1.3.2",
    "torchmaxflow==0.0.7",
    "vtk==9.4.2",
    "xgboost==3.0.0",
    "algorithms==0.1.4",
    "openpyxl>=3.1.5",
    "mmcv>=2.2.0",
    "cupy-cuda11x>=13.6.0",
    "mmengine>=0.10.7",
]

[project.optional-dependencies]
dev = [
    "black==23.12.0",
    "flake8-pyproject==1.1.0",
    "mypy==1.4.1",
    "isort==5.10.1",
    "pytest==7.4.0",
]

[tool.uv]
# 配置 uv 的自定义索引源
index-url = "https://mirrors.aliyun.com/pypi/simple"
extra-index-url = [
    "https://pypi.tuna.tsinghua.edu.cn/simple",
    "https://download.pytorch.org/whl",
    "https://download.pytorch.org/whl/cu118",
    "https://data.pyg.org/whl",
]

# 自定义依赖项的 URL（对于特定的 wheel 文件）
[tool.uv.sources]
torch-scatter = { url = "https://data.pyg.org/whl/torch-2.2.0%2Bcu118/torch_scatter-2.1.2%2Bpt22cu118-cp310-cp310-linux_x86_64.whl" }
torch-sparse = { url = "https://data.pyg.org/whl/torch-2.2.0%2Bcu118/torch_sparse-0.6.18%2Bpt22cu118-cp310-cp310-linux_x86_64.whl" }
torch-cluster = { url = "https://data.pyg.org/whl/torch-2.2.0%2Bcu118/torch_cluster-1.6.3%2Bpt22cu118-cp310-cp310-linux_x86_64.whl" }

# 配置工具设置（可选，uv 不强制要求这些工具配置）
[tool.black]
line-length = 119
target-version = ["py310"]

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 119
lines_after_imports = 2
multi_line_output = 3

[tool.flake8]
ignore = ["E203", "E231", "E501", "W503", "W504", "E401", "E402", "E741"]
max-line-length = 119

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_configs = true

[tool.pytest]
addopts = "-rs"
testpaths = ["test"]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"
